# Casino

./: .gitignore  CMakeLists.txt  IGame.h  README.md  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
